[tool.poetry]
name = "helper-scripts"
version = "0.1.0"
description = ""
authors = ["Marc Mezger <marc.mezger@gmail.com>"]
readme = "README.md"
packages = [{include = "helper_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["PIL", "cv2", "detecto", "imageio", "imgaug", "moviepy", "nemo", "requests", "transformers"]
